Fixed vertical alignment again. Both text and image are actually centered in viewport.

--- a/src/components/styles/About.module.css
+++ b/src/components/styles/About.module.css
@@ -1,10 +1,10 @@
 .mainContentArea {
-  min-height: 100vh;
 }
 
 .aboutTextContainer {
   display: flex;
   align-items: center;
+  min-height: 100vh;
 }
 
 .aboutTextContainerMobile {
@@ -18,6 +18,12 @@
 
 .introText {
   font-size: 2em;
+}
+
+.profilePicContainer {
+  min-height: 100vh;
+  display: flex;
+  align-items: center;
 }
 
 .profilePic {
